@@ -3,3 +3,4 @@ document:
 - '/wcrev'
 - '/wcchatloopclients'
 - '/wcchatisconnected'
+- '/showdamagedealt'
